--- a/atividades/atividade25052022/css/style.css
+++ b/atividades/atividade25052022/css/style.css
@@ -80,7 +80,7 @@ h1{
 
 .slide{
     background-image: url(/img/bowl-and-pet-daities-on-green-background\ 1.png);
-    height: 409px;
+    height: 100vh;
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
