--- a/atividades/atividade25052022/css/style.css
+++ b/atividades/atividade25052022/css/style.css
@@ -148,7 +148,7 @@ p{
 }
 
 span{
-
+    
     font-weight: 400;
     color: #FFFFFF;
 }
@@ -186,6 +186,7 @@ span{
 
 a{
     text-decoration: none;
+   
 }
 
 .produtos{
@@ -193,8 +194,7 @@ a{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 100%; 
+    height: 100%; 
     margin: 10px;
 }
 
@@ -234,6 +234,7 @@ a{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 10px;
 
 }
 
@@ -251,9 +252,10 @@ a{
 
 .form__txt{
     font-weight: 400;
-    font-size: 16px;
+    font-size: 9px;
     line-height: 11px;
-    color: #FFFFFF;
+
+    color: #8A8787;
     margin-left: 20px;
 }
 
@@ -286,6 +288,47 @@ a{
     
     
 }
+
+.insc{
+    height: 60px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    background-color:  #F0A83E;
+
+}
+
+.insc__form{
+    width: 346px;
+    height: 40px;
+
+    display: flex;
+    justify-content: flex-end;
+    
+}
+
+.insc__box{
+   
+    width: 271px;
+    height: 40px;
+
+    background-color: #FFFFFF;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+    
+}
+
+.title{
+    display: flex;
+    align-items: center;
+}
+
+
 
 footer{
     position: absolute;
