--- a/atividades/atividade06062022/css/form.css
+++ b/atividades/atividade06062022/css/form.css
@@ -116,7 +116,7 @@ input:focus{
     border: solid yellow;
 }
 
-input:invalid:not(:focus):not(:placeholder-shown){
+input:invalid{
     border: solid red;
 }
 
