--- a/atividades/atividade07062022/css/style.css
+++ b/atividades/atividade07062022/css/style.css
@@ -213,6 +213,11 @@ input[type="radios"]
 {
     height: 30px;
 }
+
+input:invalid:not(:focus):not(:placeholder-shown){
+    background-color: red;
+}
+
 footer{
     width: 100%;
     height: 51px;
