--- a/atividades/atividade07062022/css/style.css
+++ b/atividades/atividade07062022/css/style.css
@@ -215,7 +215,7 @@ input[type="radios"]
 }
 
 input:invalid:not(:focus):not(:placeholder-shown){
-    background-color: red;
+    border:solid red 2px;
 }
 
 footer{
