--- a/atividades/aula25/css/style.css
+++ b/atividades/aula25/css/style.css
@@ -1,64 +1,13 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    font-family: 'roboto', sans-serif;
-  }
-
-body{
-    display: grid;
-
-    
-    grid-template-columns:200px 1fr;
-    grid-template-rows:50px 1fr;
-
-    grid-template-areas: 
-    "header header"
-    "menu content";
+  --primary-color: #1d8cb8;
+  --secondary-color: #9d0fac;
 }
 
-header{
-    grid-area: header;
-    background-color: black;
-    color: azure;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 30px;
+.container-user {
+  background-color: var(--primary-color);
+  height: 300px;
 }
 
-.menu{
-    grid-area: menu;
-    background-color: gray;
-
-    padding: 30px;
-      
+.container .card{
+  background-color: #1d8cb8;
 }
-
-.menu div{
-    padding: 20px;
-    display: flex;
-    flex-direction: column;    
-    align-items: center;
-    gap: 50px;
-    
-}
-
-.menu div a{
-    text-decoration: none;
-    color: white;
-}
-
-.content{
-    grid-area: content;
-    background-color: rgb(235, 238, 215);
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    gap: 20px;
-    
-}
-
